# sanuli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md  index.html  styles.css
src/: game.rs  logic.rs  main.rs  manager.rs  migration.rs  neluli.rs  sanuli.rs  state.rs
src/components/: board.rs  header.rs  keyboard.rs  message.rs  mod.rs  modal.rs  timer.rs
src/components/neluli/: quad-board.rs
static/: _headers  robots.txt  styles.css
