[package]
name = "sanuli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
serde_scan = "0.4.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.78"
serde_json = "1.0"
gloo-storage = "0.2.0"
wasm-logger = "0.2.0"
log = "0.4.6"
wee_alloc = "0.4.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["wasmbind", "serde"]

[dependencies.web-sys]
version = "0.3"
features = [
    "KeyboardEvent",
    "Window",
    "History",
    "Document",
    "Storage",
    "Clipboard",
    "Navigator"
]

[profile.release]
# https://yew.rs/docs/advanced-topics/optimizations#cargotoml
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
